--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.1.1",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.6",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
