--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.6",
     "normalize.css": "^8.0.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.38",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
